@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 import jakarta.annotation.PostConstruct;
 import jakarta.annotation.Resource;
 import jakarta.ejb.Stateless;
@@ -83,8 +82,7 @@ public class ExternalRoutingService implements RoutingService {
   }
 
   private Itinerary toItinerary(TransitPath transitPath) {
-    List<Leg> legs =
-        transitPath.getTransitEdges().stream().map(this::toLeg).collect(Collectors.toList());
+    List<Leg> legs = transitPath.getTransitEdges().stream().map(this::toLeg).toList();
     return new Itinerary(legs);
   }
 
