@@ -2,7 +2,6 @@ package org.eclipse.cargotracker.interfaces.booking.facade.internal.assembler;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import org.eclipse.cargotracker.application.util.DateConverter;
@@ -23,7 +22,7 @@ public class ItineraryCandidateDtoAssembler {
 
   public RouteCandidate toDto(Itinerary itinerary) {
     List<org.eclipse.cargotracker.interfaces.booking.facade.dto.Leg> legDTOs =
-        itinerary.getLegs().stream().map(this::toLegDTO).collect(Collectors.toList());
+        itinerary.getLegs().stream().map(this::toLegDTO).toList();
     return new RouteCandidate(legDTOs);
   }
 
